<resources>
    <string name="app_name">FieldGenerator</string>
    <string name="cloud">Облако</string>
    <string name="independent_area">Независимая область</string>
    <string name="dependent_area">Зависимая область</string>
    <string name="field_type">Тип поля:</string>
    <string name="wind">Ветер</string>
    <string name="floatage">Изменённая плавучесть</string>
    <string name="empty">Штиль</string>
    <string name="danger">Опасность:</string>
    <string name="velocity">Скорость:</string>
    <string name="ligntning">Молния</string>
    <string name="zeppelin">Дирижабль</string>
    <string name="spider">Облачный паук</string>
    <string name="whale">Летающий кит</string>
    <string name="glasswings">Стеклокрылы</string>
    <string name="settings">Настройки</string>
    <string name="wind_possibility">Вероятность ветра</string>
    <string name="floatage_possibility">Вероятность изменённой плавучести</string>
    <string name="lightning_possibility">Вероятность молнии</string>
    <string name="enemy_possibility">Вероятность обнаружить врага</string>
    <string name="usual_field">Обычная область</string>
    <string name="reset">Значения по умолчанию</string>
    <string name="save">Сохранить</string>
    <string name="weapon">Орудие:</string>
    <string name="under">снизу</string>
    <string name="upper">cверху</string>
    <string name="left_weapon">слева</string>
    <string name="right_weapon">справа</string>
    <string name="none">отсутствует</string>
    <string name="zeppelin_type">Тип дирижабля:</string>
    <string name="pirate">Пират</string>
    <string name="whalebot">Китобой</string>
    <string name="trader">Торговец</string>
    <string name="tail_wind_possibility">Вероятность господствующего ветра</string>
    <string name="tail_side_wind_possibility">Вероятность господствующе-бокового ветра</string>
    <string name="head_wind_possibility">Вероятность встречного ветра</string>
    <string name="head_side_wind_possibility">Вероятность встречно-бокового ветра</string>
    <string name="latour">Ля Тур</string>
    <string name="communia">Коммуния</string>
    <string name="novopetrograd">Новопетроград</string>
    <string name="himlishreich">Химлишрайх</string>
    <string name="northplatforms">Северо-полушарные соединённые платформы</string>
    <string name="maru">Мару</string>
    <string name="faction">Фракция:</string>
</resources>
