<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cloud"
                android:text="@string/cloud"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/independent"
                android:text="@string/independent_area"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dependent"
                android:text="@string/dependent_area"
        />
    </LinearLayout>

</RelativeLayout>